Post title line-height and navbar z-index fix

--- a/prodekoorg/app_proleko/static/scss/app_proleko_post.scss
+++ b/prodekoorg/app_proleko/static/scss/app_proleko_post.scss
@@ -64,6 +64,12 @@
     align-items: center;
     margin: 10px 0;
     font-size: 3rem;
+    line-height: 3rem;
+
+    @media (max-width: 450px) {
+      font-size: 2rem;
+      line-height: 2.4rem;
+    }
   }
 
   .post-details {
@@ -157,6 +163,7 @@
   q,
   cite {
     position: relative;
+    z-index: 0;
     display: block;
     width: 100%;
     max-width: 800px;
@@ -170,6 +177,7 @@
     &:after {
       position: absolute;
       z-index: 100;
+      z-index: -1;
       align-self: center;
       height: auto;
       color: lightgrey;
